--- a/index.html
+++ b/index.html
@@ -10,17 +10,32 @@
 </head>
 <body class="bg-slate-100 font-sans text-slate-900" x-data="stockApp()" x-init="init()">
 
-    <header class="bg-slate-900 text-white p-4 shadow-lg sticky top-0 z-50">
-        <div class="max-w-4xl mx-auto flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <img src="logo512.png" alt="Logo" class="h-10 w-10 object-contain rounded bg-white p-1" @error="$el.style.display='none'">
-                <h1 class="text-xl font-black uppercase tracking-tight">Stock Colli</h1>
+    <header class="bg-slate-900 text-white p-4 sticky top-0 z-50 shadow-xl border-b border-slate-800">
+    <div class="max-w-4xl mx-auto flex justify-between items-center">
+        <div class="flex items-center gap-3">
+            <img src="logo512.png" alt="Logo" class="h-10 w-10 object-contain rounded bg-white p-1">
+            <div>
+                <h1 class="text-xl font-black tracking-tighter uppercase leading-none">Stock Colli</h1>
+                <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">Management System</p>
             </div>
-            <button @click="mostraAdmin = !mostraAdmin" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded-xl text-xs font-bold uppercase transition-colors">
-                <span x-text="mostraAdmin ? 'Chiudi' : 'Nuovo Collo'"></span>
+        </div>
+        
+        <div class="flex gap-2">
+            <a href="https://imgbb.com/upload" target="_blank" 
+               class="bg-amber-500 hover:bg-amber-600 text-slate-900 px-3 py-2 rounded-xl flex items-center gap-2 transition-transform active:scale-95 shadow-lg shadow-amber-900/20">
+                <span class="text-lg">📸</span>
+                <span class="text-[10px] font-black uppercase hidden sm:inline">Carica Foto</span>
+            </a>
+
+            <button @click="window.open('https://docs.google.com/spreadsheets/d/IL_TUO_ID_FOGLIO/edit', '_blank')" 
+                    class="bg-blue-600 hover:bg-blue-700 p-2 rounded-xl transition-transform active:scale-95 shadow-lg shadow-blue-900/20">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="十二M12 4v16m8-8H4"></path>
+                </svg>
             </button>
         </div>
-    </header>
+    </div>
+</header>
 
     <main class="max-w-4xl mx-auto p-4">
         
@@ -148,4 +163,5 @@
 </body>
 
 </html>
+
 
