--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <span class="text-[10px] font-black uppercase hidden sm:inline">Carica Foto</span>
             </a>
 
-            <button @click="window.open('https://docs.google.com/spreadsheets/d/https://docs.google.com/spreadsheets/d/e/2PACX-1vR1v8A-MQcrejKtWj4khgzF1sjDAeV7ldovUoKUeR-9XJUbodTIrLVOp7z9OMpz88BrtWoEcovnWXP8/pub?output=csv/edit', '_blank')" 
-                    class="bg-blue-600 hover:bg-blue-700 p-2 rounded-xl transition-transform active:scale-95 shadow-lg shadow-blue-900/20">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="十二M12 4v16m8-8H4"></path>
-                </svg>
-            </button>
+            <button @click="window.open('https://docs.google.com/spreadsheets/d/e/2PACX-1vR1v8A-MQcrejKtWj4khgzF1sjDAeV7ldovUoKUeR-9XJUbodTIrLVOp7z9OMpz88BrtWoEcovnWXP8/pub?output=csv', '_blank')" 
+        class="bg-blue-600 hover:bg-blue-700 p-2 rounded-xl transition-transform active:scale-95 shadow-lg shadow-blue-900/20">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+    </svg>
+</button>
         </div>
     </div>
 </header>
@@ -163,6 +163,7 @@
 </body>
 
 </html>
+
 
 
 
