--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 admin: false,
                 clickCount: 0,
                 // Assicurati che questo URL CSV sia quello corretto per Stock Colli
-                urlCSV: 'INCOLLA_QUI_IL_LINK_CSV_DI_STOCK_COLLI',
+                urlCSV: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR1v8A-MQcrejKtWj4khgzF1sjDAeV7ldovUoKUeR-9XJUbodTIrLVOp7z9OMpz88BrtWoEcovnWXP8/pub?output=csv',
                 
                 async init() {
                     try {
@@ -138,6 +138,7 @@
     </script>
 </body>
 </html>
+
 
 
 
