--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="text-[10px] font-black uppercase hidden sm:inline">Carica Foto</span>
                 </a>
 
-                <button @click="window.open('https://docs.google.com/spreadsheets/d/1X_TuoH5jX8ZqI9S6yvW8hE7_LqK7z3M-M6p0vV8k/edit', '_blank')" 
+                <button @click="window.open('https://docs.google.com/spreadsheets/d/1F-Ahw7MWDjDIoJx3aGWske9OICiUEZ0S-0bzBuHs3lQ/edit?gid=0#gid=0', '_blank')" 
                         class="bg-blue-600 hover:bg-blue-700 p-2 rounded-xl transition-transform active:scale-95 shadow-lg">
                     <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
@@ -138,6 +138,7 @@
     </script>
 </body>
 </html>
+
 
 
 
