--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Stock Colli Management</title>
+    <title>Stock Colli</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -20,7 +20,6 @@
                 <img src="logo512.png" alt="Logo" class="h-10 w-10 object-contain rounded bg-white p-1">
                 <div>
                     <h1 class="text-xl font-black tracking-tighter uppercase leading-none text-white">Stock Colli</h1>
-                    <p class="text-[10px] text-slate-400 font-bold uppercase tracking-widest">Management System</p>
                 </div>
             </div>
             
@@ -138,6 +137,7 @@
     </script>
 </body>
 </html>
+
 
 
 
