--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <template x-if="infoSelezionata === 'chi-siamo'">
                     <div>
                         <h3 class="text-xl font-bold mb-4" style="font-family: 'Playfair Display', serif;">Chi Siamo</h3>
-                        <p>Cosplay & Vintage è il progetto digitale di [Nome SRLS]. Selezioniamo capi unici e stock di qualità per appassionati e professionisti del settore.</p>
+                        <p>Stock Colli è il progetto digitale di Seven Shoes srls. Selezioniamo capi unici e stock di qualità per appassionati e professionisti del settore.</p>
                         <p class="mt-2 text-gray-500">Dopo anni di esperienza nel negozio fisico, oggi ci trovi online con spedizioni in tutta Italia.</p>
                     </div>
                 </template>
@@ -207,6 +207,7 @@
     </script>
 </body>
 </html>
+
 
 
 
