--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div>
                             <div class="flex justify-between items-start">
                                 <h2 class="text-sm font-black text-slate-800 uppercase leading-tight line-clamp-2" x-text="collo.descrizione"></h2>
-                                <span class="bg-blue-50 text-blue-700 font-black px-2 py-1 rounded-lg text-xs ml-2" x-text="'€' + collo.prezzo"></span>
+                                <span class="bg-blue-50 text-blue-700 font-black px-5 py-2 rounded-lg text-xs ml-2" x-text="'€' + collo.prezzo + ' + IVA'"></span>
                             </div>
                         </div>
 
@@ -207,6 +207,7 @@
     </script>
 </body>
 </html>
+
 
 
 
